--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Project</h1>
-
-<%= render 'form', project: @project %>
-
-<%= link_to 'Back', projects_path %>
+<h1 class="todo_list_title">New Project</h1>
+<div class="forms">
+  <%= render 'form' %>
+</div>
+<div class="links">
+  <%= link_to 'Back', projects_path %>
+</div>
