--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,14 +1,6 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @project.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @project.description %>
-</p>
+<h2 class="todo_list_title"><%@project.title %></h2>
+<p class="todo_list_sub_title"><%= @project.description %></p>
 
 <div id="todo_items_wrapper">
   <%= render @project.tasks %>
@@ -17,5 +9,9 @@
   </div>
 </div>
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<div class="links">
+  <%= link_to 'Edit', edit_project_path(@project) %> |
+  <%= link_to 'Back', projects_path %>
+  <%= link_to 'Delete', project_path(@project), method: :delete, data: {confirm: "Are You Sure"} %>
+
+</div>
